feat: 开发聊天功能

--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.35.79.ALL</version>
         </dependency>
+
+        <!-- websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
