fix: 首页商品信息添加过滤

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /springboot/springboot.iml
 /.idea/
 /vue/node_modules/
+/vue/.idea/dictionaries/lenovo.xml
+/vue/.idea/inspectionProfiles/Project_Default.xml
+/vue/.idea/.gitignore
+/vue/.idea/modules.xml
+/vue/.idea/vcs.xml
+/vue/.idea/vue.iml
